# libshotscope

./: .gitignore  CMakeLists.txt  README.md  RELEASE_NOTES.md  TODO  build.sh  trajectory_visualization.html
.github/workflows/: build_and_test_libshotscope.yml  ci-multi-platform.yml  code-coverage.yml  cpp_static_analysis.yml  cppcheck.yml  release.yml  static-analysis.yml
arduino/: CMakeLists.txt  ShotScope.ino
dev/: board_notes.typ  math_code_notes.typ  sensor_notes.typ
docs/: ground_providers.md  how.md  terrain.md  why.md
examples/: 3dviz.cpp  calculate_ball_landing.cpp  calculate_ball_trajectory.cpp  main.cpp  multi_ground_simulation.cpp  simple_flight_simulation.cpp  visualize_trajectory.cpp
include/: AuxiliaryCalculations.hpp  BallState.hpp  CoefficientModel.hpp  FlightPhase.hpp  FlightSimulator.hpp  FlightVisualizer.hpp  GolfBallFlight.hpp  GolfBallFlightIntermediary.hpp  GolfBallKinematics.hpp  GolfBallPhysicsVariables.hpp  GroundProvider.hpp  Simulator.hpp  TrajectoryRenderer.hpp  atmosphere.hpp  golf_ball.hpp  ground_physics.hpp  ground_surface.hpp  libgolf.hpp  libshotscope.hpp  math_constants.hpp  math_helpers.hpp  math_utils.hpp  math_variables.hpp  physics_constants.hpp  terrain_interface.hpp  version.hpp.in
src/: AuxiliaryCalculations.cpp  CoefficientModel.cpp  FlightPhase.cpp  FlightSimulator.cpp  FlightVisualizer.cpp  GolfBallFlight.cpp  GolfBallFlightIntermediary.cpp  GolfBallKinematics.cpp  GolfBallPhysicsVariables.cpp  Simulator.cpp  TrajectoryRenderer.cpp  ground_physics.cpp  main.cpp  math_helpers.cpp  math_utils.cpp  terrain_interface.cpp
test/: test_ball_flight.cpp  test_ball_physics_vars.cpp  test_bounce_phase.cpp  test_flight_intermediary.cpp  test_flight_simulator.cpp  test_ground_physics.cpp  test_ground_provider.cpp  test_helpers.cpp  test_helpers.hpp  test_math_helpers.cpp  test_math_utils.cpp  test_roll_phase.cpp  test_simulation.cpp  test_terrain_interface.cpp
